# IDOS

./: CMakeLists.txt  CharArrayIDO.cpp  CharArrayIDO.h  IDOManager.cpp  IDOManager.h  IDOSException.h  ManagedRef.cpp  ManagedValue.cpp  ManagedValue.h  Ref.h  datapack.h  ido.cpp  ido.h  idodao.cpp  idodao.h  main.cpp  test.json
src/: CMakeLists.txt  CharArrayIDO.cpp  CharArrayIDO.h  IDOManager.cpp  IDOManager.h  ManagedRef.h  Ref.h  datapack.h  datapackJSONConverter.h  ido.cpp  ido.h  idoId.h  idodao.cpp  idodao.h  main.cpp
test/: CMakeLists.txt  DataPackTest.cpp  IDOManagerTest.cpp  idodaoTest.cpp  idotest.cpp  main_unit_test.cpp
